# final_project

./: README.md
final_project/: CMakeLists.txt  package.xml
final_project/config/: camera.xacro  camera_base.xacro  gripper.xacro  gripper_equivalent.xacro  iiwa_config.rviz
final_project/launch/: bar.launch.py  iiwa_namespace.launch.py  robots_display.launch.py
final_project/maps/: counter_map.pgm  counter_map.yaml
final_project/models/arucotag1/: model.config  model.sdf
final_project/models/arucotag2/: model.config  model.sdf
final_project/models/arucotag2/mesh/: glass.dae
final_project/models/counter/: model.config  model.sdf
final_project/models/table/: model.config  model.sdf
final_project/src/: grab_simulator.cpp  grab_simulator_backup.cpp
final_project/worlds/: empty_aruco.world  rough_bar.world
ros2_fra2mo/config/: explore.yaml  navigation.yaml
ros2_fra2mo/launch/: fra2mo_explore.launch.py  fra2mo_navigation.launch.py  fra2mo_slam.launch.py  gazebo_fra2mo.launch.py
ros2_fra2mo/maps/: first_rough_map.pgm  first_rough_map.yaml
ros2_fra2mo/urdf/: lidar_gazebo_macro.xacro
ros2_kdl_package/: CMakeLists.txt  kdl_node_commands  package.xml
ros2_kdl_package/action/: Ros2KdlTraj.action
ros2_kdl_package/include/: kdl_control.h  kdl_planner.h  kdl_robot.h
ros2_kdl_package/src/: action_client.cpp  bar_client.cpp  bar_client_backup.cpp  kdl_control.cpp  kdl_planner.cpp  kdl_robot.cpp  ros2_kdl_action.cpp  ros2_kdl_action_gripper.cpp  ros2_kdl_node.cpp
ros2_package_interfaces/: CMakeLists.txt  README.md  package.xml
(+9 files in other folders)
